# backend_3rd

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.sh  utils.py
.github/workflows/: checks.yml  deploy.yml
comments/: models.py
comments/migrations/: 0001_initial.py
config/: settings.py  urls.py
config/settings/: base.py  dev.py  prod.py
follows/: models.py  serializers.py  urls.py  views.py
follows/migrations/: 0001_initial.py
images/: models.py
images/migrations/: 0001_initial.py
likes/: models.py  serializers.py  urls.py  views.py
likes/migrations/: 0001_initial.py  0002_alter_like_user.py  0003_alter_like_user.py
locations/: models.py  serializers.py  urls.py  views.py
locations/migrations/: 0001_initial.py
nginx/: Dockerfile  ozal_app.conf
post_locations/: apps.py  models.py
post_locations/migrations/: 0001_initial.py
posts/: admin.py  models.py  serializers.py  serializers_ reserved.py  urls.py  views.py  views_ reserved.py
posts/migrations/: 0001_initial.py  0002_post_map_image.py  0002_remove_post_thumbnail.py  0003_alter_post_likes_count_alter_post_view_count.py  0004_alter_post_likes_count_alter_post_view_count.py
scripts/: run.sh
users/: models.py  sdf.html  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_email_alter_user_name_alter_user_nickname_and_more.py
