[tool.poetry]
name = "ozal"
version = "0.1.0"
description = ""
authors = ["yerin1562 <yerin1562@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.6"
django-allauth = "^65.4.0"
requests = "^2.32.3"
environ = "^1.0"
django-environ = "^0.12.0"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
