[tool.poetry]
name = "ozal"
version = "0.1.0"
description = ""
authors = ["yerin1562 <yerin1562@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.6"
django-allauth = "^65.4.0"
requests = "^2.32.3"
environ = "^1.0"
django-environ = "^0.12.0"
python-dotenv = "^1.0.1"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.4.0"
drf-yasg = "^1.21.8"
django-cors-headers = "^4.7.0"
gunicorn = "^23.0.0"
psycopg = "^3.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
